welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: not found: value not
while (not estFaceMur) {avance()} 
       ^